...
                        text = state.expression + state.currentNumber,
                        style = MaterialTheme.typography.displayLarge,
                        maxLines = 3,
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(vertical = 32.dp)
                            .semantics { testTag = "Result" },
                        textAlign = TextAlign.End,
                        color = MaterialTheme.colorScheme.onBackground
                    )

                    AnimatedContent(
                        targetState = isExpanded,
...
